--- a/file.html
+++ b/file.html
@@ -1,46 +1,43 @@
-document.addEventListener('DOMContentLoaded', function () {
-    const scoreContainer = document.getElementById('score-container');
-
-    // Replace 'YOUR_API_KEY' with your actual CricAPI key
-    const apiKey = 'YOUR_API_KEY';
-    const apiUrl = `https://cricapi.com/api/matches?apikey=${apiKey}`;
-
-    async function fetchLiveScores() {
-        try {
-            const response = await fetch(apiUrl);
-            const data = await response.json();
-            displayScores(data.matches);
-        } catch (error) {
-            console.error('Error fetching live scores:', error);
-            scoreContainer.innerHTML = `<p>Unable to fetch live scores at this moment.</p>`;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live Cricket Scores</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 20px;
         }
-    }
-
-    function displayScores(matches) {
-        scoreContainer.innerHTML = ''; // Clear existing content
-
-        // Filter live matches
-        const liveMatches = matches.filter(match => match.matchStarted && match.live);
-
-        if (liveMatches.length === 0) {
-            scoreContainer.innerHTML = `<p>No live matches at the moment.</p>`;
-            return;
+        h1 {
+            color: #333;
         }
+        #score-container {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            background-color: #fff;
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+        }
+        .match {
+            padding: 10px;
+            margin: 10px 0;
+            background-color: #e1f5fe;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
 
-        // Loop through each live match and display the score
-        liveMatches.forEach(match => {
-            const matchElement = document.createElement('div');
-            matchElement.classList.add('match');
+    <h1>Live Cricket Scores</h1>
+    
+    <div id="score-container">
+        <p>Fetching live scores...</p>
+    </div>
 
-            matchElement.innerHTML = `
-                <h3>${match['team-1']} vs ${match['team-2']}</h3>
-                <p><strong>Status:</strong> ${match.matchStarted ? 'Live' : 'Upcoming'}</p>
-                <p><strong>Score:</strong> ${match.score || 'Not available yet'}</p>
-            `;
-
-            scoreContainer.appendChild(matchElement);
-        });
-    }
-
-    fetchLiveScores(); // Fetch the scores on page load
-});
+    <script src="app.js"></script>
+</body>
+</html>
